2016-09-06  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Call exit when runscript is done.

2016-09-05  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Get FreqMode from log data instead of from api url.

2016-08-29  Jimmy Petersson  <jimmy@molflow.com>

	* Settings/q_docker.m: Reset LD_LIBRARY_PATH when calling arts.
	* runscript.m: Add support for data delivery to odin api.

2016-08-22  Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Let runscript take the odin api url as an argument.
	* Settings/q_docker.m: Modify the standard settings so that all
	data can be found in the docker container.

2016-07-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* notes.txt: Extended with a description on how to generate lookup
	tables.

2016-06-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: Put try/catch around the complete
	function. That is, the function should now not break if there is
	an error, but instead returning L2 with an error message.

	* Mscripts_database/q2_get_atm.m (q2_get_atm): Added some checks
	on VMR data returned by WebApi.

2016-06-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m:
	* Settings/q_meso.m: Setting of Q.ARTS added.

	* Settings/q_fields.rst (Qsmr): Added description of flield ARTS.

	* Mscripts_precalc/q2_precalc_fgrid.m (f_opt):
	* Mscripts_precalc/q2_precalc_abslookup.m (do_1fmode):
	* Mscripts_arts/q2_oemiter.m:
	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_arts_sensor_parts.m: Adopted call of q2_arts.

	* Mscripts_arts/q2_arts.m: Now takes Q as input and uses Q.ARTS.

2016-06-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Changes to have different folders for f_grids-a and abs_lookup-s
	for stnd and meso inversions.

2016-06-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m: Updated to hold recently added fields.

2016-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>
