@@ -11,6 +11,6 @@ function jd = mjd2jd(mjd)
 %   E-mail:      pjacklam@online.no
 %   URL:         http://home.online.no/~pjacklam
 
-   error(nargchk(1, 1, nargin));
+%error(nargchk(1, 1, nargin));
 
    jd = mjd + 2400000.5;
